# yolo_all

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
Ultralytics/: persistent_cache.json
configs/: global.yaml
configs/tasks/: action.yaml  face.yaml  helmet.yaml  plate.yaml
datasets/: README.md
datasets/action/: data.resolved.yaml  data.yaml
datasets/action/reference/: README.txt  classes.txt  gesture_manifest.json  manifest.yaml  used_urls.json
datasets/face/gallery/: embeddings.pkl
datasets/helmet/: data.resolved.yaml  data.yaml
datasets/plate/: data.yaml
datasets/plate/recognition/train/: plate_local_closeup_blue.json  plate_local_scene_rear.json
datasets/plate/recognition/val/: plate_local_scene_front2.json
datasets/plate/reference/: README.txt  manifest.yaml
datasets/plate/reference/recognition/: plate_local_closeup2.json  plate_local_scene_front.json  plate_local_scene_rear2.json
datasets/plate/reference/templates/: detection_label_example.txt  recognition_label_example.json
deploy/: Dockerfile  OFFLINE_WORKFLOW.md  README.md
deploy/closed_source/: README.md
deploy/cmake/: Options.cmake  Toolchain.aarch64-rk3588.cmake
deploy/cpp/: CMakeLists.txt  README.md
deploy/cpp/include/: yolo_detector.h
deploy/cpp/src/: main.cpp  yolo_detector.cpp
scripts/: build_action_from_helmet.py  build_reference_datasets.py  camera_demo_action.py  check_offline_deps.py  download_action_gesture_dataset.py  download_datasets.py  download_pretrained_weights.py  download_real_plate_action.py  eval_plate_recognition.py  export_models.py  import_external_datasets.py  import_plate_dataset.py  kill_demo.ps1  list_devices.py  setup_third_party.py  setup_yolo_sources.py  verify_infer_only.py  verify_pipeline.py
src/: __init__.py
src/api/: server.py
src/core/: __init__.py  config.py  cv_draw.py  dataset_yaml.py  device.py  third_party_paths.py  train_config.py  weights.py  yolo_wrapper.py
src/infer/: inferencer.py
src/tasks/: face_recognition.py  face_trainer.py  plate_ocr.py  plate_recognition.py
src/train/: trainer.py
