[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-ai-platform"
version = "1.0.0"
description = "YOLO + Face + Plate + Helmet + Action Vision AI Platform"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
